style(middle-content) fix the audience button whitespace

--- a/css/general.css
+++ b/css/general.css
@@ -1,8 +1,8 @@
-ul,li,nav,p{
+ul,li,nav,p,svg{
   list-style: none;
   margin: 0;
   padding: 0;
-  
+ 
 }
 
 li{
