--- a/css/middle-content.css
+++ b/css/middle-content.css
@@ -69,28 +69,32 @@
   border-radius: 50%;
 }
 
-.input-container{
-  flex:2;
-}
-
 .post-input{
   border: none;
   outline: none;
-  padding: 1rem;
+  padding: 0.5rem;
   font-size: 1.2rem;
 }
 
 
+
 .post-audience-button{
-  max-width: 150px;
   border: none;
   outline: none;
   color: rgb(29, 155, 240);
+  white-space: nowrap;  
+}
 
+.audience-icon{
+  max-width: 1rem;
+  max-height: 1rem;
+  
+  fill: rgb(29, 155, 240);
+ 
 }
 
 
-.post-iconlist-container{
+.post-iconlist-item{
   
   border-top: 1px solid rgb(215, 215, 215);
   border-bottom: 1px solid rgb(215, 215, 215);
@@ -105,13 +109,7 @@
   margin-left: 0.8rem;
 }
 
-.audience-icon{
-  max-width: 16px;
-  max-height: 16px;
-  
-  fill: rgb(29, 155, 240);
- 
-}
+
 .post-icon{
   width: 100%;
   height: 100%;
